assets/css/details/playful.css
/* ========================================
   Detail Section > Discover Playful Designs
   ======================================== */
section.playful {
  position: relative;
  color: var(--color-white);
}
.playful-wrapper {
  position: relative;
  width: 100%;
  padding: 156px 0 151px;
}
.playful-wrapper::before {
  content: '';
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: top center;
  background-repeat: no-repeat;
  z-index: 0;
  pointer-events: none;
  aspect-ratio: 1920 / 857;
  transition: background-image 0.5s ease-in-out;
}

.theme-baby-animals .playful-wrapper::before {
  background-image: url('../../images/details/img_bc_disc_bg.png');
}

.theme-space-wonders .playful-wrapper::before {
  background-color: black;
  background-image: url('../../images/details/img_sw_disc_bg.png');
}

.theme-landscape .playful-wrapper::before {
  background-image: url('../../images/details/img_ls_disc_bg.png');
}

.playful-title {
  font-size: 48px;
  font-weight: 600;
  text-align: center;
  letter-spacing: -0.96px;
  align-self: center;
  position: relative;
  padding-bottom: 28px;
  margin-bottom: 62px;
  color: #fff;
}

.playful-title .mobile-br {
  display: none;
}
.playful-title::after {
  content: '';
  display: block;
  position: absolute;
  right: 0;
  left: 0;
  bottom: 0;
  margin: 0 auto;
  width: 73px;
  height: 4px;
  background-color: #ffcc00;
}

.section-playful-inner {
  position: relative;
  max-width: 1240px;
  margin: 0 auto;
  padding: 0 20px;
  display: flex;
  flex-direction: column;
  align-items: stretch;
  gap: 64px;
}

.playful-videos {
  display: flex;
  flex-direction: column;
  gap: 20px;
  width: 100%;
  max-width: 1200px;
  align-self: center;
  margin-top: 0;
}

.playful-video-item {
  position: relative;
  width: 100%;
  height: auto;
  overflow: hidden;
  display: flex;
  align-items: stretch;
  justify-content: stretch;
  padding: 20px 22px 25px;
  aspect-ratio: 300 / 59;
}

.playful-video-bg {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: contain;
  display: block;
  z-index: 0;
}

.playful-video-grid {
  position: relative;
  width: 100%;
  height: 100%;
  max-width: 1200px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: start;
  gap: 160px;
  margin: 0 auto;
  padding: 0;
  z-index: 2;
}

.playful-video-cell {
  /* 확인용 값 */
  /*opacity: 0.3;*/
  /*border: 1px solid red;*/
  position: relative;
  width: 100%;
  height: 100%;
  overflow: hidden;
  cursor: pointer;
  transition: height var(--transition-base);
  background-color: black;
}

.playful-video-player {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  z-index: 1;
  opacity: 0;
  transition: opacity var(--transition-base);
  pointer-events: none;
}
.playful-video-cell.playing .playful-video-player {
  opacity: 1;
  pointer-events: auto;
}
.playful-video-cell.playing .playful-video-overlay {
  opacity: 0;
  pointer-events: none;
}

.playful-video-label {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 4px;
  text-align: center;
}

.playful-label-type {
  font-size: 32px;
  font-weight: 700;
  color: var(--color-white);
  letter-spacing: -0.64px;
  line-height: normal;
}

.playful-label-device {
  font-size: 32px;
  font-weight: 700;
  color: var(--color-white);
  letter-spacing: -0.64px;
  line-height: normal;
}

.playful-video-play {
  width: 66px;
  height: 45.932px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 8px;
  transition: transform var(--transition-base);
}

.playful-video-cell:hover .playful-video-play {
  transform: scale(1.1);
}

.playful-video-play img {
  width: 100%;
  height: 100%;
  display: block;
}

.playful-text-block {
  width: 100%;
  max-width: 780px;
  display: flex;
  flex-direction: column;
  gap: 12px;
  color: #ffffff;
  align-self: flex-start;
  z-index: 10;
}

.playful-text-block h3 {
  font-size: 24px;
  font-weight: 600;
}

.playful-text-block p {
  font-size: 16px;
  font-weight: 400;
  color: #ffffff;
}

.playful-feature {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 20px;
  margin: 0;
  padding: 0;
}

.feature-media {
  overflow: hidden;
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.feature-media img {
  width: 100%;
  height: auto;
  display: block;
  border-radius: 8px;
  border: 2px solid #3b3b3b;
}

.feature-text {
  color: #ffffff;
  display: flex;
  flex-direction: column;
  z-index: 10;
}

.feature-text h3 {
  font-size: 24px;
  font-weight: 600;
  letter-spacing: -0.02em;
}

.feature-text p {
  margin-top: 12px;
  font-size: 16px;
  font-weight: 400;
  color: #ffffff;
}

.feature-text p.feature-note {
  margin-top: 8px;
  font-size: 16px;
  color: #acacac;
  letter-spacing: -0.32px;
}

@media screen and (max-width: 1240px) {
  .playful-video-grid {
    gap: calc(100% * 164 / 1200);
  }
  .playful-video-item {
    padding: 1.75cqw 2cqw 2cqw;
  }
}

@media screen and (max-width: 769px) {
  .playful-wrapper {
    padding: 40px 0 50px;
  }
  .playful-title {
    padding-bottom: 19px;
    font-size: 30px;
    letter-spacing: -0.6px;
    line-height: normal;
    margin-bottom: 40px;
  }
  .playful-title::after {
    width: 35px;
    height: 3px;
  }
  .playful-title .mobile-br {
    display: inline;
  }

  .section-playful-inner {
    gap: 40px;
  }

  .playful-videos {
    gap: 8px;
  }
  .playful-text-block {
    margin-top: 8px;
    gap: 2px;
  }
  .playful-text-block h3 {
    font-size: 18px;
  }
  .playful-text-block p {
    font-size: 14px;
  }

  .feature-media {
    gap: 16px;
  }
  .feature-media img {
    border-radius: 4px;
  }
  .feature-text h3 {
    font-size: 18px;
  }
  .feature-text p {
    margin-top: 2px;
    font-size: 14px;
  }
  .feature-text p.feature-note {
    font-size: 10px;
  }
}
@media screen and (max-width: 649px) {
  .playful-wrapper {
    padding-top: 72px;
  }
  .playful-title {
    margin-bottom: 60px;
  }
}

